2003-02-20  John Levon  <levon@movementarian.org>

	* utils/opcontrol: set LIB_SAMPLES if KERNEL_SAMPLES in .daemonrc

2003-02-20  John Levon  <levon@movementarian.org>

	* dae/opd_stats.h:
	* dae/opd_stats.c:
	* daemon/opd_stats.h:
	* daemon/opd_stats.c:
	* dae/opd_proc.c:
	* daemon/opd_image.c: remove unused OPD_SAMPLE_COUNTS. Actually
	  count samples for 2.5

2003-02-20  John Levon  <levon@movementarian.org>

	* libop/op_interface_25.h:
	* daemon/opd_kernel.c: implement module dropping

	* daemon/opd_image.c:
	* daemon/opd_kernel.c: attempt to make verbose logs
	  less confusing

2003-02-22  Dave Jones <davej@codemonkey.org.uk>

	* libop/op_events.c: segregload is utm_mask not utm_exclusive

2003-02-20  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/output_format.h:
	* pp/output_format.cpp:
	* pp/op_time.cpp:
	* pp/oprofpp.cpp:
	* pp/opp_symbol.h: better handling of 64/32 bits bfd_vma
	  in output

2003-02-20  John Levon  <levon@movementarian.org>

	* libutil++/op_exception.h:
	* libutil++/op_exception.cpp: throw() where needed

2003-02-19  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* daemon/opd_image.h:
	* daemon/opd_image.cpp:
	* daemon/opd_kernel.cpp: fix thinko with --separate=kernel resulting
	  in duplicate opening of the same samples file.

2003-02-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_exception.h:
	* libutil++/op_exception.cpp: new files, base class for exception.
	  Not used for now.

2003-02-19  John Levon  <levon@movementarian.org>

	* acinclude.m4: update from upstream

	* gui/ui/oprof_start.base.ui:
	* gui/oprof_start.cpp: separate --setup,--start.
	  Hide non-2.5 stuff in 2.5.

2003-02-18  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* dae/opd_sample_files.c:
	* daemon/opd_sample_files.c: opd_handle_old_sample_file() don't
	  try to delete old samples files if they don't exist.

2003-02-18  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol (do_options): Better option error checking.
